chore: Add spring boot and storing data in DB